particle is not displayed definitely when I use a new dependence graph. #44748

Closed
opened 2015-05-18 08:11:13 +02:00 by perfection cat · 9 comments

System Information
Windows XP/SP3 32bits
Blender Version
Broken: version 2.74 (sub 5), branch b'master', commit date b'2015-05-18' b'00:02', hash b'29aae4d', b'Release'
Worked: 2.73a

Short description of error
particle is not displayed definitely when I use a new dependence graph.
Exact steps for others to reproduce the error
Run blender where a new dependence graph became effective.
Generate Cube.
Set Maximun Draw Type of Cube in Wire.
Add Particle system to Cube.
Set End Frame of Emission to 1.

**System Information** Windows XP/SP3 32bits **Blender Version** Broken: version 2.74 (sub 5), branch b'master', commit date b'2015-05-18' b'00:02', hash b'29aae4d', b'Release' Worked: 2.73a **Short description of error** particle is not displayed definitely when I use a new dependence graph. **Exact steps for others to reproduce the error** Run blender where a new dependence graph became effective. Generate Cube. Set Maximun Draw Type of Cube in Wire. Add Particle system to Cube. Set End Frame of Emission to 1.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sindra1961

Added subscriber: @sindra1961
Author

When a new dependence graph is set for invalidity, it is displayed definitely.

When a new dependence graph is set for invalidity, it is displayed definitely.
Sergey Sharybin self-assigned this 2015-05-18 13:57:24 +02:00
Author

I add some information that I confirmed.

The state that I showed in the first report.
sc1.png
It was displayed when I changed seed.
sc2.png
I changed Emit From, but particles system is not changed.
sc3.png
I changed seed once again, but particles system is not changed.
sc4.png
particles disappeared when I changed 'How particles are rendered' several times.
sc6.png

version 2.74 (sub 5), branch b'master', commit date b'2015-05-26' b'00:25', hash b'eb799dc', b'Release'

I add some information that I confirmed. The state that I showed in the first report. ![sc1.png](https://archive.blender.org/developer/F179992/sc1.png) It was displayed when I changed seed. ![sc2.png](https://archive.blender.org/developer/F179994/sc2.png) I changed Emit From, but particles system is not changed. ![sc3.png](https://archive.blender.org/developer/F179996/sc3.png) I changed seed once again, but particles system is not changed. ![sc4.png](https://archive.blender.org/developer/F179998/sc4.png) particles disappeared when I changed 'How particles are rendered' several times. ![sc6.png](https://archive.blender.org/developer/F180001/sc6.png) version 2.74 (sub 5), branch b'master', commit date b'2015-05-26' b'00:25', hash b'eb799dc', b'Release'

This issue was referenced by 9fc1033429

This issue was referenced by 9fc1033429bffbaa9fa3bea106e9f5a4c5a3cf65

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

@Sergey:
I tested it in new daily build, but nothing is improved.

version 2.74 (sub 5), branch b'master', commit date b'2015-05-27' b'23:07', hash b'46d8bcb', b'Release'

@Sergey: I tested it in new daily build, but nothing is improved. version 2.74 (sub 5), branch b'master', commit date b'2015-05-27' b'23:07', hash b'46d8bcb', b'Release'
Author

screen.png

![screen.png](https://archive.blender.org/developer/F180525/screen.png)
Author

@Sergey
It was for the following daily build and confirmed that this problem was improved.
version 2.74 (sub 5), branch b'master', commit date b'2015-05-28' b'20:10', hash b'3511e2d', b'Release'
Would this be improved in f777983d5b?
Thanks.

However, I make a different report because different malfunction is included.

@Sergey It was for the following daily build and confirmed that this problem was improved. version 2.74 (sub 5), branch b'master', commit date b'2015-05-28' b'20:10', hash b'3511e2d', b'Release' Would this be improved in f777983d5b? Thanks. However, I make a different report because different malfunction is included.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44748
No description provided.