Fix T44748: Particle is not displayed definitely when I use a new dependence graph